--- a/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
@@ -68,7 +68,7 @@
                 <Button x:Name="BtnRegistreren" Content="Registreren" Margin="5,5,5,0" Width="150" VerticalAlignment="Center" Background="#555555" BorderBrush="{x:Null}" materialDesign:ButtonAssist.CornerRadius="5" Height="30"  />
             </StackPanel>
             <Button x:Name="BtnAfsluiten" Content="Afsluiten" Margin="180,18,750,12" Width="150" VerticalAlignment="Center" Background="#555555" BorderBrush="{x:Null}"  materialDesign:ButtonAssist.CornerRadius="5" Height="30" Click="BtnAfsluiten_Click" />
-            <Button x:Name="BtnHome" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="22" Height="36" Margin="482,10,476,14" Width="114">Destiny</Button>
+            <Button x:Name="BtnHome" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="22" Height="36" Margin="482,10,476,14" Width="114" Click="BtnHome_Click">Destiny</Button>
         </Grid>
         <Grid x:Name="GridMenu" HorizontalAlignment="Left" Width="70" Background="#FF00C7A3">
             <StackPanel>
