mainwindow.cs -> changed elseif to switch to show user control

--- a/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
@@ -86,7 +86,7 @@
                             <TextBlock Text="Character" VerticalAlignment="Center" Margin="20 10"/>
                         </StackPanel>
                     </ListViewItem>
-                    <ListViewItem x:Name="ItemCreate" Height="60">
+                    <ListViewItem x:Name="Wapens" Height="60">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="BoomGate" Height="25" Width="25" Margin="10"/>
                             <TextBlock Text="Wapens" VerticalAlignment="Center" Margin="20 10"/>
