--- a/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
@@ -104,7 +104,7 @@
                             <TextBlock Text="Items" VerticalAlignment="Center"  Margin="20 10"/>
                         </StackPanel>
                     </ListViewItem>
-                    <ListViewItem Height="60">
+                    <ListViewItem x:Name="Locations" Height="60">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="MapSearchOutline" Height="25" Width="25" Margin="10"/>
                             <TextBlock Text="Locations" VerticalAlignment="Center"  Margin="20 10"/>
