--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Locations.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Locations.xaml
@@ -9,25 +9,25 @@
              d:DesignHeight="550" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Label x:Name="lblLocations" Content="Locations" Grid.Column="1" FontWeight="Bold" FontSize="30" Foreground="#333333" HorizontalAlignment="Center" Margin="7"></Label>
+        <Label x:Name="lblLocations" Content="Locations" Grid.Column="1" FontWeight="Bold" FontSize="30" Foreground="#333333" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="7"></Label>
 
-        <ComboBox x:Name="cmbWorld" Grid.Column="1" Grid.Row="1" Width="230" FontSize="15" HorizontalAlignment="Center" VerticalContentAlignment="Center"
+        <ComboBox x:Name="cmbWorld" Grid.Column="1" Grid.Row="1" Width="230" FontSize="15" HorizontalAlignment="Center" HorizontalContentAlignment="Center"
                      materialDesign:HintAssist.Hint="choose world" SelectionChanged="cmbWorld_SelectionChanged">
         </ComboBox>
 
 
-        <DataGrid x:Name="dbLocations" Grid.Row="2"  AutoGenerateColumns="False" SelectionChanged="dbLocations_SelectionChanged"  Margin="190,40,190,0" Grid.ColumnSpan="3" >
+        <DataGrid x:Name="dbLocations" Grid.Row="2"  AutoGenerateColumns="False" SelectionChanged="dbLocations_SelectionChanged"  Margin="190,40,190,0" Grid.ColumnSpan="3" Width="428">
             <DataGrid.Resources>
                 <Style TargetType="{x:Type DataGridColumnHeader}">
                     <Setter Property="Background" Value="#333" />
@@ -45,14 +45,14 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <StackPanel Orientation="Horizontal" Grid.ColumnSpan="3" Grid.Row="3" HorizontalAlignment="Center" Margin="20,0,0,0">
-            <TextBox x:Name="txtLocations"  Width="180" Margin="40" />
-            <TextBox x:Name="txtArea" Width="180" Margin="40"/>
+        <StackPanel Orientation="Horizontal" Grid.ColumnSpan="3" Grid.Row="3" HorizontalAlignment="Center" Margin="0,10,0,10">
+            <TextBox x:Name="txtLocations" materialDesign:HintAssist.Hint="Locatie" Width="205" Margin="0,0,10,0" />
+            <TextBox x:Name="txtArea" materialDesign:HintAssist.Hint="Area" Width="205" Margin="10,0,0,0"/>
         </StackPanel>
 
-        <Button x:Name="BtnWijzig" Content="Wijzig" Grid.Column="0" Grid.Row="4" Margin="10"/>
-        <Button x:Name="BtnToeevogen" Content="Voeg toe" Grid.Column="1" Grid.Row="4" Margin="10"/>
-        <Button x:Name="BtnVerwijderen" Content="Verwijderen" Grid.Column="2" Grid.Row="4" Margin="10"/>
+        <Button x:Name="BtnWijzig" Content="Wijzig" Grid.Column="0" Grid.Row="4" Margin="10,10,10,20"/>
+        <Button x:Name="BtnToeevogen" Content="Voeg toe" Grid.Column="1" Grid.Row="4" Margin="10,10,10,20"/>
+        <Button x:Name="BtnVerwijderen" Content="Verwijderen" Grid.Column="2" Grid.Row="4" Margin="10,10,10,20"/>
 
 
 
