--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Character-Wijzigen.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Character-Wijzigen.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Project_Destiny_WPF.UserControls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -19,7 +19,15 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Label Content="Character-Wijzigen" FontSize="24" Margin="0,-10,0,9.8" HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="AntiqueWhite" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0"/>
-
+        <Button x:Name="btnTerug" Click="btnTerug_Click" HorizontalAlignment="Left" Margin="10"
+  Style="{StaticResource MaterialDesignIconForegroundButton}"
+  ToolTip="MaterialDesignIconForegroundButton">
+            <materialDesign:PackIcon
+     Kind="ArrowBack" 
+                Height="30"
+                Width="40"
+                Foreground="DarkGoldenrod"/>
+        </Button>
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="70"/>
@@ -31,16 +39,17 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
+            
             <Label  Content="Selecteer wat je wil wijzigen" Margin="20,15,0,0"  Foreground="White" FontSize="20" HorizontalAlignment="Left" Width="344" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"/>
             <RadioButton Background="White" Grid.Row="1" HorizontalAlignment="Left" Margin="20,0,0,0" Height="30" Width="30" x:Name="rbMarking"
             Style="{StaticResource MaterialDesignFlatPrimaryToggleButton}"
             ToolTip="MaterialDesignFlatPrimaryToggleButton"
                          IsChecked="True">
-
                 <materialDesign:PackIcon
                          Kind="SkullCrossbonesOutline"
                             Height="21"
                               Width="21" Foreground="DarkGoldenrod"/>
+ 
             </RadioButton>
             <Label Content="Marking" Grid.Row="1" Foreground="White" Margin="60,15,0,0" FontSize="16"/>
 
@@ -128,9 +137,9 @@
             </Button>
         </Grid>
 
-        <Button x:Name="btnOpslaan" Grid.Row="2" Grid.Column="1" 
+        <Button x:Name="btnOpslaan" Grid.Row="2" Grid.Column="1" Click="btnOpslaan_Click"
     Style="{StaticResource MaterialDesignRaisedButton}"
-    ToolTip="Resource name: MaterialDesignRaisedButton" Content="Opslaan" VerticalContentAlignment="Top"  Background="White" Foreground="Black" Margin="197,131,0,9.6" Height="Auto" HorizontalAlignment="Left" Width="195">
+    ToolTip="Resource name: MaterialDesignRaisedButton" Content="Opslaan" VerticalAlignment="Bottom"  Background="White" Foreground="Black" Margin="197,131,0,9.6" HorizontalAlignment="Left" Width="195">
         </Button>
     </Grid>
 </UserControl>
