--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/SpecialItem.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/SpecialItem.xaml
@@ -1,12 +1,81 @@
 ﻿<UserControl x:Class="Project_Destiny_WPF.UserControls.SpecialItem"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:Project_Destiny_WPF.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition />
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Label x:Name="lblItems" Content="Special Items" Grid.Column="1" FontWeight="Bold" FontSize="30" Foreground="#333333" HorizontalAlignment="Center" Margin="8"></Label>
+
+        <TextBox x:Name="tbZoekItem" Grid.Row="1"  Width="230" FontSize="15" KeyDown="tbZoekItem_KeyDown"
+  materialDesign:HintAssist.Hint="Zoek item" materialDesign:TextFieldAssist.UnderlineBrush="#333"
+  VerticalAlignment="Bottom" Margin="124,0,0,0"/>
+        <ComboBox x:Name="cmbCategorie" Grid.Column="1" Width="210" FontSize="15" HorizontalAlignment="Center" VerticalContentAlignment="Center"
+                     materialDesign:HintAssist.Hint="Kies categorie" SelectionChanged="cmbCategorie_SelectionChanged" Grid.Row="1"  Margin="0,0,0,0"/>
+        <ComboBox x:Name="cmbZeldzaamheid" Grid.Column="1" Width="210" FontSize="15" HorizontalAlignment="Center" VerticalContentAlignment="Center"
+                     materialDesign:HintAssist.Hint="Kies zeldzaamheid" SelectionChanged="cmbZeldzaamheid_SelectionChanged"  Grid.Row="1"  Margin="215,0,0,0" Grid.ColumnSpan="2"/>
+
+        <DataGrid x:Name="dbItems" Grid.Row="2" Grid.ColumnSpan="3"  AutoGenerateColumns="False" SelectionChanged="dbItems_SelectionChanged"  Width="698" HorizontalAlignment="Center" Margin="10,20,5,20">
+            <DataGrid.Resources>
+                <Style TargetType="{x:Type DataGridColumnHeader}">
+                    <Setter Property="Background" Value="#333" />
+                    <Setter Property="FontWeight" Value="Bold" />
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                    <Setter Property="Padding" Value="6"/>
+                    <Setter Property="BorderThickness" Value="0,0,2,0"></Setter>
+                    <Setter Property="BorderBrush" Value="#fff"/>
+                </Style>
+            </DataGrid.Resources>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Naam" Width="200"/>
+                <DataGridTextColumn Header="Zeldzaamheid" Width="150"/>
+                <DataGridTextColumn Header="Categorie" Width="150"/>
+                <DataGridTextColumn Header="Durability" Width="100"/>
+                <DataGridTextColumn Header="Boost" Width="100"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <WrapPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="0" Margin="159,10,0,10">
+
+            <TextBox x:Name="txtNaam"    Width="200" FontSize="14" HorizontalAlignment="Center"
+  materialDesign:HintAssist.Hint="Naam"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
+  VerticalAlignment="Bottom" Padding="2,0,0,0" />
+
+            <ComboBox x:Name="cmbDbZeldzaamheid" Width="150" FontSize="14" HorizontalAlignment="Center"
+  materialDesign:HintAssist.Hint="Zeldzaamheid"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
+  VerticalAlignment="Bottom" Padding="2,0,0,5" />
+
+            <ComboBox x:Name="cmbDbCategorie" Width="150" FontSize="14" HorizontalAlignment="Center"
+  materialDesign:HintAssist.Hint="Categorie"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
+  VerticalAlignment="Bottom" Padding="2,0,0,5"/>
+
+            <TextBox x:Name="txtDurability"    Width="100" FontSize="14" HorizontalAlignment="Center"
+  materialDesign:HintAssist.Hint="Durability"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
+  VerticalAlignment="Bottom" Padding="2,0,0,0" />
+
+            <TextBox x:Name="txtBoost"    Width="100" FontSize="14" HorizontalAlignment="Center"
+  materialDesign:HintAssist.Hint="Resilience"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
+  VerticalAlignment="Bottom" Padding="2,0,0,0" />
+        </WrapPanel>
+        <WrapPanel Orientation="Horizontal" Grid.Row="4" Grid.ColumnSpan="3" Grid.Column="0" Margin="110,10,0,20">
+            <Button x:Name="btnAddWeapon" Content="Voeg item toe" Grid.ColumnSpan="2" Width="250" Grid.Row="4" />
+            <Button x:Name="btnChangeWeapon" Content="Wijzig item" Width="250" Grid.Row="4" Grid.Column="1" Margin="22,0,22,0" />
+            <Button x:Name="btnRemoveWeapon" Content="Verwijder item" Width="250" Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="1" Margin="0,0,0,0" />
+        </WrapPanel>
     </Grid>
 </UserControl>
+
