--- a/Oef_Project_Destiny/Project_Destiny_WPF/Registerscreen.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/Registerscreen.xaml
@@ -24,14 +24,11 @@
             <Label Content="Emailadres" Foreground="#00FFFF"/>
             <TextBox Name="txtEmailadres" Background="#555555" Foreground="White" FontSize="18"/>
             <Label Content="Wachtwoord" Foreground="#00FFFF" />
-            <PasswordBox Name="txtWachtwoord" Background="#555555" Foreground="White" FontSize="18"/>
+            <PasswordBox x:Name="txtWachtwoord" Background="#555555" Foreground="White" FontSize="18"/>
             <Label Content="Herhaal Wachtwoord" Foreground="#00FFFF" />
-            <PasswordBox Name="txtHerhaalWachtwoord" Background="#555555" Foreground="White" FontSize="18"/>
-            
-            <Button x:Name="BtnRegistreren" Content="Registreren" Background="#555555" Foreground="White" BorderBrush="{x:Null}" Margin="60" RenderTransformOrigin="0.49,-0.153"/>
-            
+            <PasswordBox x:Name="txtHerhaalWachtwoord" Background="#555555" Foreground="White" FontSize="18"/>
 
-
+            <Button x:Name="BtnRegistreren" Content="Registreren" Background="#555555" Foreground="White" BorderBrush="{x:Null}" Margin="60" RenderTransformOrigin="0.49,-0.153" Click="BtnRegistreren_Click"/>
         </StackPanel>
     </Grid>
 </Window>
