--- a/Oef_Project_Destiny/Project_Destiny_WPF/Registerscreen.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/Registerscreen.xaml
@@ -16,7 +16,8 @@
 
         </StackPanel>
         <StackPanel Margin="150,1,160,1">
-            <Label Content="Registreren" FontWeight="Bold" Foreground="White" FontSize="25" Margin="20,20,20,10" HorizontalAlignment="Center" />
+            <Label Content="Registreren" FontWeight="Bold" Foreground="White" FontSize="25" Margin="20" HorizontalAlignment="Center" />
+            <TextBlock Text="Maak hier je eigen account aan!" Foreground="white" TextWrapping="Wrap" TextAlignment="Center"/>
             <Separator></Separator>
             <Label Content="Gebruikersnaam" Foreground="#00FFFF"/>
             <TextBox Name="txtGebruikersnaam" Background="#555555" Foreground="White" FontSize="18"/>
@@ -29,7 +30,7 @@
 
 
 
-            <Button x:Name="BtnRegistreren" Content="Registreren" Background="#555555" Foreground="White" BorderBrush="{x:Null}" Margin="60,30,60,20" RenderTransformOrigin="0.49,-0.153" Click="BtnRegistreren_Click"/>
+            <Button x:Name="BtnRegistreren" Content="Registreren" Background="#555555" Foreground="White" BorderBrush="{x:Null}"  Margin="70,30" RenderTransformOrigin="0.49,-0.153" Click="BtnRegistreren_Click"/>
             <Button x:Name="BtnAlAccount" Content="Al een account?" Foreground="White" Background="{x:Null}" BorderBrush="{x:Null}" Click="BtnAlAccount_Click"/>
         </StackPanel>
     </Grid>
