--- a/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
@@ -59,7 +59,7 @@
                 <TextBlock Text="Accountnaam" VerticalAlignment="Center" FontSize="16"/>
                 <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Margin="10">
                     <StackPanel Width="150">
-                        <Button Content="Settings"/>
+                        <Button x:Name="BtnSettings" Content="Settings" Click="BtnSettings_Click"/>
                         <Button Content="Account"/>
                         <Button Content="Help"/>
                         <Separator/>
