--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Ingelogd.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Ingelogd.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="Project_Destiny_WPF.UserControls.Welkom"
+﻿<UserControl x:Class="Project_Destiny_WPF.UserControls.Ingelogd"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Project_Destiny_WPF.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
     <Grid Background="{x:Null}">
-        <TextBlock x:Name ="tbWelkom" FontWeight="Bold" Text="Welkom" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="40"/>
+        <TextBlock x:Name ="tbWelkom" FontWeight="Bold" Text="Welkom" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="40" Padding="0,0,0,5"/>
     </Grid>
 </UserControl>
