--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Character-Maken.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Character-Maken.xaml
@@ -4,9 +4,120 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Project_Destiny_WPF.UserControls"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="180"/>
+            <ColumnDefinition Width="180"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Label FontSize="30" Content="Character aanmaken" Foreground="White" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="12"/>
+        <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <ComboBox Grid.Row="0" Grid.Column="0"
+                 materialDesign:HintAssist.Hint="Selecteer een ras"
+                MinWidth="72"
+              FontSize="15"
+                    Margin="12 0 0 0"
+                Foreground="Gold"
+                    ItemsSource="{Binding LongListToTestComboVirtualization}"
+                         Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+                <ComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel />
+                    </ItemsPanelTemplate>
+                </ComboBox.ItemsPanel>
+            </ComboBox>
+            <ComboBox Grid.Row="1" Grid.Column="0"
+                 materialDesign:HintAssist.Hint="Selecteer de subklasse"
+                MinWidth="72"
+              FontSize="15"
+                    Margin="12 0 0 0"
+                Foreground="Gold"
+                    ItemsSource="{Binding LongListToTestComboVirtualization}"
+                         Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+                <ComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel />
+                    </ItemsPanelTemplate>
+                </ComboBox.ItemsPanel>
+            </ComboBox>
+            <ComboBox Grid.Row="2" Grid.Column="0"
+                 materialDesign:HintAssist.Hint="Selecteer het gender"
+                MinWidth="72"
+              FontSize="15"
+                    Margin="12 0 0 0"
+                Foreground="Gold"
+                    ItemsSource="{Binding LongListToTestComboVirtualization}"
+                         Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+                <ComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel />
+                    </ItemsPanelTemplate>
+                </ComboBox.ItemsPanel>
+            </ComboBox>
+            <ComboBox Grid.Row="0" Grid.Column="1"
+                 materialDesign:HintAssist.Hint="Selecteer de klasse"
+                MinWidth="72"
+              FontSize="15"
+                    Margin="12 0 0 0"
+                Foreground="Gold"
+                    ItemsSource="{Binding LongListToTestComboVirtualization}"
+                         Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+                <ComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel />
+                    </ItemsPanelTemplate>
+                </ComboBox.ItemsPanel>
+            </ComboBox>
+
+            <ComboBox Grid.Row="1" Grid.Column="1"
+                 materialDesign:HintAssist.Hint="Selecteer een gezicht"
+                MinWidth="72"
+              FontSize="15"
+                    Margin="12 0 0 0"
+                Foreground="Gold"
+                    ItemsSource="{Binding LongListToTestComboVirtualization}"
+                         Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+                <ComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel />
+                    </ItemsPanelTemplate>
+                </ComboBox.ItemsPanel>
+            </ComboBox>
+            <ComboBox Grid.Row="2" Grid.Column="1"
+                 materialDesign:HintAssist.Hint="Selecteer het haar"
+                MinWidth="72"
+              FontSize="15"
+                    Margin="12 0 0 0"
+                Foreground="Gold"
+                    ItemsSource="{Binding LongListToTestComboVirtualization}"
+                         Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+                <ComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel />
+                    </ItemsPanelTemplate>
+                </ComboBox.ItemsPanel>
+            </ComboBox>
+        </Grid>
+        <Button x:Name="btnAanmaken" Content="Maak het character aan " Grid.Column="0" Grid.Row="3" Background="Gray" Grid.ColumnSpan="3" Margin="10,41,10,32.6" Height="55" />
+        <ListBox x:Name="lstOverzicht" Grid.Column="2" Background="White" Grid.Row="1" Grid.RowSpan="2" Margin="15"/>
     </Grid>
 </UserControl>
+
