--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Character.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Character.xaml
@@ -8,7 +8,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              d:DesignHeight ="400" d:DesignWidth ="600"
              Background="{x:Null}">
-            
+
     <Grid x:Name="gridCharacter">
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
@@ -22,13 +22,10 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Label Content="Character" FontSize="24" Margin="0,-10,0,9.8" HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="AntiqueWhite" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0"/>
-        <Button
+        <Button x:Name="btnAanmaken" Click="btnAanmaken_Click"
     Style="{StaticResource MaterialDesignRaisedButton}"
-    materialDesign:ButtonProgressAssist.Value="-1"
-    materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"
-    materialDesign:ButtonProgressAssist.IsIndeterminate="True"
     Content="Character aanmaken"
-    Margin="10" Background="Gold" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/>
+    Margin="10"  Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/>
         <ListBox x:Name="lbCharacters" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" HorizontalContentAlignment="Center" FontSize="16" Margin="10" BorderThickness="1" BorderBrush="Black" Background="White" Foreground="Black">
             <ListBoxItem>
                 Hello
@@ -42,26 +39,12 @@
         </ListBox>
         <Button x:Name="btnAanpassen" Click="btnAanpassen_Click"
     Style="{StaticResource MaterialDesignRaisedButton}"
-    materialDesign:ButtonProgressAssist.Value="-1"
-    materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"
-    materialDesign:ButtonProgressAssist.IsIndeterminate="True"
     Content="Character aanpassen"
-    Margin="10" Background="Gold" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center"/>
-
+    Margin="10" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center"/>
         <Button
     Style="{StaticResource MaterialDesignRaisedButton}"
-    materialDesign:ButtonProgressAssist.Value="-1"
-    materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"
-    materialDesign:ButtonProgressAssist.IsIndeterminate="True"
-    Content="Inventory bekijken"
-    Margin="10" Background="Gold" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center"/>
-        <Button
-    Style="{StaticResource MaterialDesignRaisedButton}"
-    materialDesign:ButtonProgressAssist.Value="-1"
-    materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"
-    materialDesign:ButtonProgressAssist.IsIndeterminate="True"
-    Content="Character verwid"
-    Margin="10" Background="Gold" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center"/>
+    Content="Character verwijderen"
+    Margin="10" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center"/>
 
     </Grid>
 </UserControl>
