--- a/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
@@ -60,10 +60,10 @@
                 <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Margin="10">
                     <StackPanel Width="150">
                         <Button x:Name="BtnSettings" Content="Settings" Click="BtnSettings_Click"/>
-                        <Button Content="Account"/>
-                        <Button Content="Help"/>
+                        <Button x:Name="btnAccount" Content="Account" Click="btnAccount_Click"/>
+                        <Button x:Name="btnHelp" Content="Help" Click="btnHelp_Click"/>
                         <Separator/>
-                        <Button Content="Logout"/>
+                        <Button x:Name="btnAfmelden" Content="Logout" Click="btnAfmelden_Click"/>
                     </StackPanel>
                 </materialDesign:PopupBox>
             </StackPanel>
