--- a/Oef_Project_Destiny/Project_Destiny_WPF/RegisterWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/RegisterWindow.xaml
@@ -17,16 +17,16 @@
         </StackPanel>
         <StackPanel Margin="150,1,160,1">
             <Label Content="Registreren" FontWeight="Bold" Foreground="White" FontSize="25" Margin="20" HorizontalAlignment="Center" />
-            <TextBlock Text="Maak hier je eigen account aan!" Foreground="white" TextWrapping="Wrap" TextAlignment="Center"/>
-            <Separator></Separator>
+            <TextBlock Text="Maak hier je eigen account aan!" Foreground="white" TextWrapping="Wrap" TextAlignment="Center" Margin="0,0,0,5"/>
+            <Separator Margin="0,5"></Separator>
             <Label Content="Gebruikersnaam" Foreground="#00FFFF"/>
-            <TextBox Name="txtGebruikersnaam" Background="#555555" Foreground="White" FontSize="18"/>
+            <TextBox Name="txtGebruikersnaam" Background="#555555" Foreground="White" FontSize="18" Padding="2,0,0,0"/>
             <Label Content="Emailadres" Foreground="#00FFFF"/>
-            <TextBox Name="txtEmailadres" Background="#555555" Foreground="White" FontSize="18"/>
+            <TextBox Name="txtEmailadres" Background="#555555" Foreground="White" FontSize="18" Padding="2,0,0,0"/>
             <Label Content="Wachtwoord" Foreground="#00FFFF" />
-            <PasswordBox x:Name="txtWachtwoord" Background="#555555" Foreground="White" FontSize="18"/>
+            <PasswordBox x:Name="txtWachtwoord" Background="#555555" Foreground="White" FontSize="18" Padding="2,0,0,0"/>
             <Label Content="Herhaal Wachtwoord" Foreground="#00FFFF" />
-            <PasswordBox x:Name="txtHerhaalWachtwoord" Background="#555555" Foreground="White" FontSize="18"/>
+            <PasswordBox x:Name="txtHerhaalWachtwoord" Background="#555555" Foreground="White" FontSize="18" Padding="2,0,0,0"/>
             <Button x:Name="BtnRegistreren" Content="Registreren" Background="#555555" Foreground="White" BorderBrush="{x:Null}"  Margin="70,30" RenderTransformOrigin="0.49,-0.153" Click="BtnRegistreren_Click"/>
             <Button x:Name="BtnAlAccount" Content="Al een account?" Foreground="White" Background="{x:Null}" BorderBrush="{x:Null}" Click="BtnAlAccount_Click"/>
         </StackPanel>
