--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/LocationsControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/LocationsControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Project_Destiny_WPF.UserControls.Locations"
+﻿<UserControl x:Class="Project_Destiny_WPF.UserControls.LocationsUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
