--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              d:DesignHeight ="400" d:DesignWidth ="600"
-             Background="{x:Null}">
+             Background="{x:Null}" Loaded="UserControl_Loaded">
 
     <Grid x:Name="gridCharacter">
         <Grid.RowDefinitions>
@@ -26,7 +26,8 @@
     Style="{StaticResource MaterialDesignRaisedButton}"
     Content="Character aanmaken"
     Margin="10"  Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/>
-        <ListBox x:Name="lbCharacters" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" HorizontalContentAlignment="Center" FontSize="16" Margin="10" BorderThickness="1" BorderBrush="Black" Background="White" Foreground="Black">
+        <ScrollViewer Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="25,10,15,0">
+        <ListBox x:Name="lbCharacters"  HorizontalContentAlignment="Center" FontSize="16"  BorderThickness="1" BorderBrush="Black" Background="White" Foreground="Black">
             <ListBoxItem>
                 Hello
             </ListBoxItem>
@@ -37,11 +38,12 @@
                 :D :D
             </ListBoxItem>
         </ListBox>
+        </ScrollViewer>
         <Button x:Name="btnAanpassen" Click="btnAanpassen_Click"
     Style="{StaticResource MaterialDesignRaisedButton}"
     Content="Character aanpassen"
     Margin="10" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center"/>
-        <Button
+        <Button x:Name="btnVerwijderen" Click="btnVerwijderen_Click"
     Style="{StaticResource MaterialDesignRaisedButton}"
     Content="Character verwijderen"
     Margin="10" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center"/>
